--- a/common-services/hdfs/pom.xml
+++ b/common-services/hdfs/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
-      <version>0.20.2</version>
+      <version>1.0.2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -58,6 +58,22 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
     </dependency>
+    <dependency>
+      <groupId>pentaho</groupId>
+      <artifactId>pentaho-authentication-mapper-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>pentaho</groupId>
+      <artifactId>pentaho-big-data-api-hdfs</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <!-- Temporary Dependency to enable impersonation -->
+    <dependency>
+      <groupId>com.pentaho</groupId>
+      <artifactId>pentaho-ee-secure-impersonation-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -70,6 +86,9 @@
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Import-Package>org.apache.hadoop.security,org.pentaho.hadoop.*,org.apache.hadoop.fs.*,org.apache.hadoop.conf.*,!org.apache.hadoop.*,!org.pentaho.di.core.hadoop.*,!org.pentaho.yarn.*,*</Import-Package>
+            <Export-Package>
+              com.pentaho.big.data.bundles.impl.shim.hdfs.*
+            </Export-Package>
           </instructions>
         </configuration>
       </plugin>
