--- a/shims/pom.xml
+++ b/shims/pom.xml
@@ -376,6 +376,7 @@
         </property>
       </activation>
       <modules>
+        <module>emr520</module>
         <module>hdp25</module>
         <module>hdp26</module>
         <module>hdp30</module>
